[tool.poetry]
name = "jtea-marketplace"
version = "0.1.0"
description = "Japanese tea marketplace"
authors = ["Nikolaj-dev <nikolaypetrichshev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
